# chainsentinel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py  middleware.py
backend/app/api/v1/: addresses.py  ai.py  auth.py  dashboard.py  graph.py  risk.py  router.py  users.py
backend/app/core/: celery_app.py  database.py  logging.py  neo4j.py  redis.py  security.py
backend/app/domain/: address_classifier.py  blockchain.py  risk_factors.py  sanctions.py
backend/app/models/: __init__.py  address.py  alert.py  audit_log.py  investigation.py  report.py  risk_assessment.py  transaction.py  user.py
backend/app/providers/: __init__.py  base.py  demo_provider.py  factory.py
backend/app/schemas/: __init__.py  address.py  auth.py  common.py  graph.py  investigation.py  report.py
backend/app/services/: address_service.py  ai_investigator.py  behavior_analyzer.py  dashboard_service.py  graph_service.py  investigation_service.py  ml_engine.py  report_generator.py  risk_engine.py
backend/app/tasks/: __init__.py  analysis_tasks.py  ml_tasks.py  report_tasks.py
backend/tests/: conftest.py  test_health.py
docker/nginx/: nginx.conf
docker/postgres/: init.sql
frontend/: Dockerfile  package-lock.json
