[project]
name = "chainsentinel"
version = "0.1.0"
description = "Enterprise-grade Crypto AML Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "N806", "B008"]

[tool.ruff.lint.per-file-ignores]
"app/schemas/common.py" = ["UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]


[[tool.mypy.overrides]]
module = "app.services.ml_engine"
ignore_errors = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

